{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 50,
  "lineage": "6dca5bd7-480a-c8b7-7c30-23ddbd928559",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06c8947c3149a924c",
            "arn": "arn:aws:ec2:eu-west-1:019273956931:instance/i-0af7bbafd71ffb439",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af7bbafd71ffb439",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-05cfe15f1a1e345cb",
            "private_dns": "ip-172-31-10-251.eu-west-1.compute.internal",
            "private_ip": "172.31.10.251",
            "public_dns": "ec2-52-48-53-203.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.48.53.203",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0efc381c58544f2a7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "shani-dev-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b05e0a00fa2a2d8",
            "tags": {
              "Name": "shani-dev"
            },
            "tags_all": {
              "Name": "shani-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fb2302641572bda3"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.data_bucket",
            "aws_security_group.sg_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:security-group/sg-0fb2302641572bda3",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fb2302641572bda3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "shani-dev-sg",
            "name_prefix": "",
            "owner_id": "019273956931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01519ea046fe6e03e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:internet-gateway/igw-071814724196c43b0",
            "id": "igw-071814724196c43b0",
            "owner_id": "019273956931",
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-071814724196c43b0",
            "id": "r-rtb-0af39c05ff703cb311080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0af39c05ff703cb31",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_internet_gateway.this",
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:route-table/rtb-0f04e88b77b8479cf",
            "id": "rtb-0f04e88b77b8479cf",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:route-table/rtb-078d6ef69b283ed45",
            "id": "rtb-078d6ef69b283ed45",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:route-table/rtb-044fb4aec228a16de",
            "id": "rtb-044fb4aec228a16de",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:route-table/rtb-0af39c05ff703cb31",
            "id": "rtb-0af39c05ff703cb31",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-071814724196c43b0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0193c5fbef90d2749",
            "route_table_id": "rtb-0f04e88b77b8479cf",
            "subnet_id": "subnet-02f618a6f506d8fdd"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bc69ff7b2ddbd20",
            "route_table_id": "rtb-078d6ef69b283ed45",
            "subnet_id": "subnet-0635a00a04cf489c8"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0962fcb2dde90a082",
            "route_table_id": "rtb-044fb4aec228a16de",
            "subnet_id": "subnet-08bae12a3e0bbd33b"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07da5029b2cbb094c",
            "route_table_id": "rtb-0af39c05ff703cb31",
            "subnet_id": "subnet-0f44b1675c58e166c"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e769bd301b1320b",
            "route_table_id": "rtb-0af39c05ff703cb31",
            "subnet_id": "subnet-0f4aa1ecf7863cdaf"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033a87a80ec0ecebf",
            "route_table_id": "rtb-0af39c05ff703cb31",
            "subnet_id": "subnet-0ee6dd5fda4352371"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-02f618a6f506d8fdd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f618a6f506d8fdd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-0635a00a04cf489c8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0635a00a04cf489c8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-08bae12a3e0bbd33b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08bae12a3e0bbd33b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-0f44b1675c58e166c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f44b1675c58e166c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-0f4aa1ecf7863cdaf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f4aa1ecf7863cdaf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-0ee6dd5fda4352371",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee6dd5fda4352371",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0d31787a51aa379aa"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:vpc/vpc-0d31787a51aa379aa",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ebdf6ded510258c6",
            "default_route_table_id": "rtb-04a708d5777890038",
            "default_security_group_id": "sg-0a58693d12b3a3684",
            "dhcp_options_id": "dopt-07ccee96c00270bc3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0d31787a51aa379aa",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04a708d5777890038",
            "owner_id": "019273956931",
            "tags": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "shani-10.0.0.0/16-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}